clipping issue solved

--- a/src/components/Team/Card.module.css
+++ b/src/components/Team/Card.module.css
@@ -4,7 +4,6 @@
   justify-content: center;
   cursor: pointer;
   margin-bottom: 4vw;
-  
   overflow: hidden;
   
 }
@@ -93,15 +92,20 @@
   font-weight: 700;
   gap: 6.67px;
   z-index: 100;
+
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+
 }
 
 .name{
-  font-size: 1.3rem;
+  font-size: 1.7vw;
   z-index: 50;
 }
 
 .position{
-  font-size: 0.9rem;
+  font-size: 0.9vw;
   z-index: 3;
 }
 
@@ -136,6 +140,12 @@
   .frame{
     height: 260px;
     width: 180px;
+  }
+}
+
+@media (max-width: 976px) {
+  .profile{
+    padding-left: 1.5rem;
   }
 }
 
@@ -219,6 +229,10 @@
   .frame{
     height: 15rem;
     width: 11.875rem;
+  }
+
+  .name{
+    font-size: 1.3rem;
   }
 
 }
